<resources>
    <!-- Currently only mainly used in the manifest but is also used
    in the action bar when the application opens up -->
    <string name="app_name">ACM</string>

    <string name="sign_up_button"> Sign up for our mailing list</string>

    <!-- A string array used to display names in the drawer itself.
    The spaces is an easy way to align and to place more empty spaces.
    A spacebar won't work and will be ignored. Only these work:
    Windows: [alt-255]
    Mac: [option-space]
    Linux : [Ctrl+Shift+U + a0] -->
    <string-array name="sections">
        <item>    Home</item>
        <item>    Calender</item>
        <item>    Sign up</item>
        <item>    Feedback</item>
        <item>    Settings</item>
        <item>    About</item>
    </string-array>

    <!-- A string array that represents strings that will be displayed at
    the action bar when their fragment is selected -->
    <string-array name="section_titles">
        <item>Home</item>
        <item>Calender</item>
        <item>Sign up</item>
        <item>Feedback</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>

    <!-- A string array that holds the values linking to drawable icons.
    These icons will be placed before their respective descriptions -->
    <string-array name="sections_icons">
        <item>@drawable/ic_action_home</item>
        <item>@drawable/ic_action_event</item>
        <item>@drawable/ic_account_circle</item>
        <item>@drawable/ic_action_feedback</item>
        <item>@drawable/ic_action_settings</item>
        <item>@drawable/ic_action_help</item>
    </string-array>

    <!-- open and close drawer description for accessibility -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- A long description that is placed on the homepage of the app -->
    <string name="placeholder">Setting</string>
    <string name="defineACM">The Association for Computing Machinery is the largest international
        organization devoted to science and education related to computing. It is a non-profit
        organization founded in 1947 that provides its members access to professional publications,
        conferences, and career resources. Our mission statement is to provide a platform of
        educational resources to foster a diverse community of people passionate about technology.
    </string>
    <string name="logodescription">Logo of ACM</string>

    <!-- Ids given to the switches in the setting drawer -->
    <string name="notificationswitch">Notification</string>
    <string name="themeswitch">Theme</string>
    <string name="soundswitch">Volume       </string>
    <string name="disclaimer">  App may need to restart for themes to take effect.</string>

    <!-- Strings used for sharing data using the SharedPreferences -->
    <string name="notificationdata">notificationdata</string>
    <string name="themedata">themedata</string>
    <string name="volumedata">volumedata</string>

    <!-- Strings used for the feedback page including button -->
    <string name="feedbackbutton">Send        </string>
    <string name="feedbacknamehint">First and last name</string>
    <string name="feedbackemailhint">Email</string>
    <string name="feedbackfeedbackhint">Message of feedback.</string>
    <string name="feedbackbuttonhint">Button to push all the data entered.</string>
    <string name="rowspinnerhelp">An image to be used in spinner</string>

    <!-- An array list that holds the text related to spinner in settings -->
    <string-array name="array_theme">
        <item>Green</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Purple</item>
        <item>Indigo</item>
        <item>Cyan</item>
        <item>Yellow</item>
        <item>Orange</item>
        <item>Brown</item>
        <item>Grey</item>
    </string-array>

    <!-- An array list that mildly describes each of the themes. -->
    <string-array name="array_theme_describe">
        <item>The official theme of ACM</item>
        <item>Red theme, similar to Gmail</item>
        <item>A standard blue look</item>
        <item>Purple for when why not</item>
        <item>Indigo, much like purple</item>
        <item>Cyan theme for a blueish look</item>
        <item>Yellow for a bright look</item>
        <item>Orange, much like yellow</item>
        <item>Brown, for a dark look</item>
        <item>Grey, a standard dark look</item>
    </string-array>

    <!-- An array list of icons that represents each row. -->
    <string-array name="array_theme_icon">
        <item>@drawable/ic_insert_photo</item>
        <item>@drawable/ic_insert_photo</item>
        <item>@drawable/ic_insert_photo</item>
        <item>@drawable/ic_insert_photo</item>
        <item>@drawable/ic_insert_photo</item>
        <item>@drawable/ic_insert_photo</item>
        <item>@drawable/ic_insert_photo</item>
        <item>@drawable/ic_insert_photo</item>
        <item>@drawable/ic_insert_photo</item>
        <item>@drawable/ic_insert_photo</item>
    </string-array>

    <!-- Other resources not belonging anywhere else -->
    <string name="popupbutton">OK!</string>
</resources>
