<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <EditText
        android:id="@+id/namefield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/feedbacknamehint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/emailfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/feedbackemailhint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/feedbackfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/feedbackfeedbackhint" />

    <Button
        android:id="@+id/pushfields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/feedbackbuttonhint"
        android:text="@string/feedbackbutton" />
</LinearLayout>