<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07" />

    <EditText
        android:id="@+id/namefield2"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/ic_action_account_circle"
        android:ellipsize="start"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/feedbacknamehint"
        android:inputType="textPersonName"
        android:maxLength="30" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07" />

    <EditText
        android:id="@+id/emailfield2"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/ic_action_email_24"
        android:ellipsize="start"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/feedbackemailhint"
        android:inputType="textEmailAddress"
        android:maxLength="30" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.75" />

    <Button
        android:id="@+id/pushfields2"
        style="?android:attr/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_button"
        android:drawableLeft="@drawable/ic_action_email"
        android:hint="@string/feedbackbuttonhint"
        android:text="@string/feedbackbutton"
        android:textAllCaps="false" />
</LinearLayout>